addressed comments and added more tests
Signed-off-by: Amit Galitzky <amgalitz@amazon.com>